Add caching support and enhance cleanup process for old files and cache entries

--- a/.gitignore
+++ b/.gitignore
@@ -32,10 +32,12 @@ instance/
 # Application specific
 uploads/*
 outputs/*
+cache/*
 *.log
 *.zip
 !uploads/.gitkeep
 !outputs/.gitkeep
+!cache/.gitkeep
 
 # IDE
 .idea/
